# NetXray

./: .gitignore  Dockerfile  README.md  manage.sh
backend/: README.md  constants.py  pyproject.toml
backend/api/: config.py  main.py  schemas.py  state.py
backend/api/routes/: capture.py  collect.py  config.py  diagnosis.py  iac.py  lab.py  link.py  metrics.py  share.py  telemetry.py  topology.py  ws.py
backend/collector/: capture_manager.py  clab.py  clab_lifecycle.py  clab_netem.py  driver_base.py  gnmi_client.py  ssh_client.py  telemetry_manager.py
backend/collector/drivers/: __init__.py  arista.py  frr.py
backend/data/topologies/: simple-3node.json  spine-leaf-4.json
backend/diagnosis/: analyzer.py  llm_client.py  rules.py
backend/metrics/: __init__.py
backend/plugins/: __init__.py  base_config_generator.py  generic_driver.py  generic_parser.py  plugin_base.py
backend/plugins/arista/: __init__.py  config_generator.py  driver.py  parser.py  plugin.py
backend/plugins/cisco_xr/: __init__.py  plugin.py
backend/plugins/frr/: __init__.py  config_generator.py  driver.py  parser.py  plugin.py
backend/plugins/juniper_junos/: __init__.py  plugin.py
backend/tests/: conftest.py  test_api.py  test_arista_parser.py  test_clab.py  test_clab_exporter.py  test_clab_yaml_importer.py  test_config_gen.py  test_diagnosis.py  test_frr_parser.py  test_iac.py  test_ir_builder.py  test_link_builder.py  test_metrics.py  test_share.py  test_telemetry.py
backend/translator/: clab_yaml_importer.py  ir_builder.py  ir_helpers.py  link_builder.py  parser_base.py
(+99 files in other folders)
